--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,20 +31,25 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI & Routing
   cupertino_icons: ^1.0.8
-  flutter_bloc: ^9.1.1
-  go_router: ^17.0.0
+  go_router: ^14.0.0 
+  google_fonts: ^6.3.2
+  timeago: ^3.7.1
+  
+  # State Management
+  flutter_bloc: ^9.1.1 # Usa bloc ^9.0.0
+  equatable: ^2.0.8
+  
+  # Architecture & DI
   get_it: ^8.3.0
   injectable: ^2.5.1
+  dartz: ^0.10.1
+  uuid: ^4.5.2
+  
+  # Code Generation
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
-  uuid: ^4.5.2
-  equatable: ^2.0.8
-  google_fonts: ^6.3.2
-  dartz: ^0.10.1
-  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +65,8 @@ dev_dependencies:
   freezed: ^3.1.0
   json_serializable: ^6.9.5
   injectable_generator: ^2.7.0
+  bloc_test: ^10.0.0  # 👈 Versión 10 para compatibilidad con Bloc 9
+  mocktail: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
